--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         }
       }
     </style>
-    <title>Document</title>
+    <title>Tidtabell: Tvättstuga</title>
   </head>
   <body>
     <div id="app" class="container">
